# strictdoc-service

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  clean_docker.sh  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pre-commit-output.txt  pyproject.toml  renovate.json  requirements.txt  run_tests.sh  sonar-project.properties  test-export.json  test-export.reqif  test-export.reqifz  test-export.xlsx  test_with_docker.sh  tox.ini
.claude/: settings.json
.claude/agents/: api-developer.md  code-debugger.md  code-reviewer.md  context7-docs.md  docker-optimizer.md  python-developer.md  research-coordinator.md  subagent-expert.md  ubi-redhat-expert.md  uv-python-installer.md
.github/: zizmor.yml
.github/workflows/: ci.yml  claude-code-review.yml
app/: __init__.py  constants.py  metrics_server.py  prometheus_metrics.py  sanitization.py  strictdoc_controller.py  strictdoc_metrics.py  strictdoc_service_application.py
docs/: ALPINE_NOT_SUPPORTED.md  claude-code-agents.md
monitoring/: README.md  docker-compose.yml  generate-load.sh  prometheus.yml  restart-monitoring.sh  start-monitoring.sh  stop-monitoring.sh
monitoring/grafana/dashboards/: strictdoc-service.json
monitoring/grafana/provisioning/dashboards/: default.yml
tests/: README.md  __init__.py  conftest.py  test_metrics_server.py  test_prometheus_metrics.py  test_sanitization.py  test_strictdoc_controller.py  test_strictdoc_metrics.py  test_strictdoc_service_application.py  test_uvloop_compatibility.py
tests/container/: container-structure-test.yaml
tests/export/: __init__.py  conftest.py  test_integration.py  test_unit.py
tests/shell/: test-export.json  test-export.reqif  test-export.reqifz  test-export.rst  test-export.sdoc  test-export.xlsx  test_strictdoc_service.sh
