[project]
name = "strictdoc-service"
version = "0.0.0"  # the version is controlled by the pipeline
description = "Service for StrictDoc requirements management and documentation tool"
authors = [
    {name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch"},
]
license = "Apache License 2.0"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["dependencies"]
# Dependencies moved back to [tool.poetry.dependencies] for Renovate compatibility
# See: https://github.com/renovatebot/renovate/issues/33509
# TODO: Migrate back to [project.dependencies] when Renovate adds Poetry v2 support
# dependencies = [
#     "strictdoc==0.9.1",
#     "fastapi==0.115.13",
#     "uvicorn==0.34.3",
#     "pathvalidate==3.3.1",
#     # pinning version to avoid security issues
#     "urllib3==2.5.0",  # if not pinned, "poetry update" will downgrade it from 2.5.0 to 2.4.0
# ]

[tool.poetry]
packages = [{include = "app"}]

# this duplication and legacy format must be kept until Renovate support is added for [project.dependencies] for poetry-lock updates
# for more information check comments above
[tool.poetry.dependencies]
strictdoc = "0.10.0"
fastapi = "0.117.1"
uvicorn = "0.37.0"
pathvalidate = "3.3.1"
# pinning version to avoid security issues
urllib3 = "2.5.0"  # if not pinned, "poetry update" will downgrade it from 2.5.0 to 2.4.0

[tool.poetry.group.dev.dependencies]
pre-commit = "4.3.0"
ruff = "0.13.2"
mypy = "1.18.2"

[tool.poetry.group.test.dependencies]
tox = "4.30.2"
# for debug source code for pytest --> see tox.ini section [testenv]
docker = "7.1.0"
pytest = "8.4.2"
pytest-mock = "3.15.1"
pytest-asyncio = "1.2.0"
httpx = "0.28.1"
coverage = "7.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 240
fix = true
show-fixes = true
exclude = [
    "tests/*"  # Exclude all test files from linting
]

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # No assert rule (bandit)
    "PLR2004", # No magic values (pylint)
    "F405", # undefined-local-with-import-star-usage (pyflakes)
    "F403", # No import * (pyflakes)
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.pylint]
max-args = 7

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
install_types = true
non_interactive = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
