[project]
name = "strictdoc-service"
version = "0.0.0"  # the version is controlled by the pipeline
description = "Service for StrictDoc requirements management and documentation tool"
authors = [
    {name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch"},
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "strictdoc==0.18.0",
    "fastapi==0.133.0",
    "uvicorn==0.41.0",
    "pathvalidate==3.3.1",
    "prometheus-client>=0.22.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    # pinning version to avoid security issues
    "urllib3==2.6.3",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.15.2",
    "mypy==1.19.1",
]
test = [
    "tox==4.45.0",
    # for debug source code for pytest --> see tox.ini section [testenv]
    "docker==7.1.0",
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "coverage==7.13.4",
]

[tool.uv]
# Set to false because this project is an application, not a library
package = false

[tool.ruff]
line-length = 240
fix = true
show-fixes = true
exclude = [
    "tests/*"  # Exclude all test files from linting
]

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # No assert rule (bandit)
    "PLR2004", # No magic values (pylint)
    "F405", # undefined-local-with-import-star-usage (pyflakes)
    "F403", # No import * (pyflakes)
]
"app/strictdoc_controller.py" = [
    "PLW0603", # Global statement for metrics server singleton
    "PLR0915", # Too many statements in export_document (complex export logic)
]
"app/strictdoc_metrics.py" = [
    "PLW0603", # Global statement for singleton pattern
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.pylint]
max-args = 7

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
install_types = true
non_interactive = true

[[tool.mypy.overrides]]
module = [
    "prometheus_client",
    "prometheus_client.*",
    "prometheus_fastapi_instrumentator",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
